hphp/hack/test/typecheck/reactive/print_in_rx9.php.coeffects.exp
File "print_in_rx9.php", line 10, characters 3-6:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "print_in_rx9.php", line 6, characters 8-53:
  This function is normal.
File "print_in_rx9.php", line 10, characters 3-6:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "print_in_rx9.php", line 5, characters 14-15:
  From this declaration, the context of this function body provides the capability Rx
  File "print_in_rx9.php", line 6, characters 22-29:
  But the function being called requires the capability set {AccessStaticVariable, Output, WriteProperty}
